<resources>
    <string name="app_name">MoWA</string>
    <string name="app_description">Monitoring the Elder with Wi-Fi and AI speaker</string>

    <!-- introduction -->
    <string name="not_show">다시 보지 않기</string>
    <string name="close">닫기</string>
    <string name="introduction_description">당신의 건강과 안전에 도움을 드립니다.</string>
    <string name="introduction_mainfunction_title">주요 기능</string>
    <string name="introduction_mainfunction1">와이파이 감지를 통한 가정 내 특정 상황 감지</string>
    <string name="introduction_mainfunction2">월별 활동 통계를 통한 현재 내 상황 파악하기</string>
    <string name="introduction_mainfunction3">사용자 편의를 위한 스마트폰 애플리케이션</string>
    <string name="introduction_detailfunction_title">세부 기능</string>
    <string name="introduction_detailfunction1_title">경고 기능</string>
    <string name="introduction_detailfunction1_description">사용자 움직임 횟수가 적은 경우</string>
    <string name="introduction_detailfunction2_title">넘어짐 감지</string>
    <string name="introduction_detailfunction2_description">Wi-Fi Sensing을 통한 넘어짐 감지</string>
    <string name="introduction_detailfunction3_title">활동 권장</string>
    <string name="introduction_detailfunction3_description">사용자별 활동 통계 분석</string>

    <!-- setting/menu -->
    <string name="menu">메뉴</string>
    <string name="setting_title">앱 설정</string>
    <string name="setting_alarm_title">알림 설정</string>
    <string name="setting_alarm">알림 권한</string>
    <string name="setting_account">계정/정보 관리</string>
    <string name="setting_logout">로그아웃</string>
    <string name="setting_user_title">사용자 설정</string>
    <string name="setting_app_info">앱 정보</string>
    <string name="setting_app_intro">앱 소개</string>
    <string name="setting_privacy">개인정보 처리방침</string>

    <!-- privacy information policy -->
    <string name="title">제목</string>
    <string name="content">내용</string>

    <!-- user actions -->
    <string name="login">로그인</string>
    <string name="google_login">구글 로그인</string>
    <string name="change_password">비밀번호 변경</string>
    <string name="reset_password">비밀번호 재설정</string>
    <string name="signup">회원가입</string>
    <string name="email">이메일</string>
    <string name="code">인증 번호</string>
    <string name="verify_email">이메일 인증</string>
    <string name="password">비밀번호</string>
    <string name="password_confirm">비밀번호 확인</string>
    <string name="name">이름</string>
    <string name="hint_email">이메일을 입력해 주세요.</string>
    <string name="hint_verify_code">이메일 인증 번호를 입력해 주세요.</string>
    <string name="hint_password">**********</string>
    <string name="hint_name">홍길동</string>
    <string name="hint_change_password">변경할 비밀번호를 입력해 주세요.</string>
    <string name="question_signup">아직 회원이 아니신가요?</string>
    <string name="question_change_password"><u>비밀번호를 잊으셨나요?</u></string>
    <string name="error">에러 메시지</string>
    <string name="error_login">입력하신 이메일 혹은 비밀번호가 맞지 않습니다.</string>
    <string name="error_invalid_email">이메일 형식이 올바르지 않습니다.</string>
    <string name="error_different_password">비밀번호가 일치하지 않습니다.</string>

    <!-- home -->
    <string name="home">홈</string>
    <string name="home_today">오늘의 기록</string>
    <string name="home_weather">오늘의 날씨</string>
    <string name="home_temperature">오늘의 기온</string>
    <string name="warning_count">🚨 경고 발생 횟수 🚨</string>
    <string name="activity_count">🏃 활동 권장 횟수 🏃</string>
    <string name="fall_count">⚠️ 넘어진 횟수⚠️ </string>
    <string name="home_initial_number">0</string>

    <!-- statistics -->
    <string name="statistics">월별 활동 통계</string>
    <string name="statistics_date">날짜</string>

    <!-- phone book -->
    <string name="phonebook">전화번호부</string>
    <string name="welfarecenter">복지 시설</string>
    <string name="public_contacts">공공 연락처</string>
    <string name="private_contacts">개인 연락처</string>
    <string name="phone_number_format">000–0000–0000</string>
    <string name="update">업데이트</string>

    <!-- privacy information policy -->
    <string name="policy_privacy_information_first_description">
        MoWA(이하 모와)는 고객님의 개인정보를 중요시하며, "정보통신망 이용촉진 및 정보보호"에 관한 법률을 준수하고 있습니다.
    </string>
    <string name="policy_privacy_information_second_description">
        MoWA(이하 모와)는 개인정보취급방침을 통하여 고객님께서 제공하시는 개인정보가 어떠한 용도와 방식으로 이용되고 있으며, 개인정보보호를 위해 어떠한 조치가 취해지고 있는지 알려드립니다.
        관계 법령 및 개인정보 취급방침에 따라 사용자 개인정보 보호에 최선을 다합니다.
    </string>
    <string name="policy_privacy_information_a_title">
        가. 수집하는 개인정보의 항목 및 수집방법
    </string>
    <string name="policy_privacy_information_a_description">
        MoWA 앱(이하 모와)은 개인을 식별할 수 있는 개인정보를 수집하지 않습니다.\n
        단, 제 3자의 서비스인 광고 및 분석 서비스에 의해 광고 식별자인 Android 광고 ID가 수집될 수도 있습니다.
        광고 식별자는 미 영구적이고 비 개인적인 식별자로써 개인을 식별할 수 없으며 식별한 정보를 별도로 수집, 보관 하지 않습니다.
    </string>
    <string name="policy_privacy_information_b_title">
        나. 개인정보의 수집 및 이용목적메세지
    </string>
    <string name="policy_privacy_information_b_description">
        MoWA(이하 모와)는 개인정보를 수집하지 않습니다.
    </string>
    <string name="policy_privacy_information_c_title">
        다. 개인정보 제공 및 공유
    </string>
    <string name="policy_privacy_information_c_description">
        MoWA(이하 모와)는 개인정보를 공유 및 제3자에게 제공하지 않습니다.
    </string>
    <string name="policy_privacy_information_d_title">
        라. 수집한 개인정보의 취급 위탁
    </string>
    <string name="policy_privacy_information_d_description">
        MoWA(이하 모와)는 개인정보를 수집, 이용, 보유하지 않습니다.
    </string>
    <string name="policy_privacy_information_e_title">
        마. 개인정보의 보유 및 이용기간
    </string>
    <string name="policy_privacy_information_e_description">
        MoWA(이하 모와) 앱은 보유할 개인정보가 없습니다.
    </string>
    <string name="policy_privacy_information_f_title">
        바. 개인정보 파기절차 및 방법
    </string>
    <string name="policy_privacy_information_f_description">
        MoWA(이하 모와) 앱은 파기할 개인정보가 없습니다.
    </string>
    <string name="policy_privacy_information_g_title">
        사. 개인정보 자동 수집 장치의 설치․운영 및 거부에 관한 사항
    </string>
    <string name="policy_privacy_information_g_description">
        MoWA(이하 모와) 앱은 개인정보 자동 수집 장치를 운영하지 않습니다.
    </string>
    <string name="policy_privacy_information_h_title">
        아. 개인정보관리책임자
    </string>
    <string name="policy_privacy_information_h_description">
        MoWA(이하 모와) 앱은 고객의 개인정보를 보호하고 개인정보와 관련한 불만을 처리하기 위하여 아래와 같이 관련 부서 및 개인정보관리책임자를 지정하고 있습니다.\n
        성명: 장정익, 남선우, 문정곤, 우태경, 표지성\n
        직책: MoWA 개발자\n\n
        귀하께서는 MoWA의 서비스를 이용하시며 발생하는 모든 개인정보보호 관련 민원을 개인정보관리책임자에게 신고하실 수 있습니다.
        MoWA 앱은 이용자들의 신고사항에 대해 신속하게 충분한 답변을 드릴 것입니다.\n
        기타 개인정보침해에 대한 신고나 상담이 필요하신 경우에는 아래 기관에 문의하시기 바랍니다.\n
        1.개인분쟁조정위원회 (www.1336.or.kr/1336)\n
        2.정보보호마크인증위원회 (www.eprivacy.or.kr/02–580–0533~4)\n
        3.대검찰청 인터넷범죄수사센터 (http://icic.sppo.go.kr/02–3480–3600)\n
        4.경찰청 사이버테러대응센터 (www.ctrc.go.kr/02–392–0330)
    </string>
    <string name="policy_privacy_information_i_title">
        자.
    </string>
    <string name="policy_privacy_information_i_description">
        개인정보 처리방침 변경일 개인정보처리방침은 시행일로부터 적용되며, 법령 및 방침에 따른 변경내용의 추가, 삭제 및 정정이 있는 경우에는 변경사항의 시행 전 또는 후 어플리케이션 고객센터/도움말을 통하여 고지할 것입니다.
        이 개인정보처리방침은 2023년 9월 7일부터 적용됩니다.
    </string>

</resources>