<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:title="@string/setting_alarm_title">
        <menu>
            <group
                android:id="@+id/setting_alarm_group"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/setting_alarm_item"
                    android:title="@string/setting_alarm"
                    app:actionLayout="@layout/action_setting_menu_switch" />
            </group>
        </menu>
    </item>

    <item android:title="@string/setting_user_title">
        <menu>
            <group
                android:id="@+id/setting_user_group"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/setting_account_item"
                    android:title="@string/setting_account" />
                <item
                    android:id="@+id/setting_logout_item"
                    android:title="@string/setting_logout" />
            </group>
        </menu>
    </item>

    <item android:title="@string/setting_app_info">
        <menu>
            <group
                android:id="@+id/setting_app_info_group"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/setting_app_intro_item"
                    android:title="@string/setting_app_intro" />
                <item
                    android:id="@+id/setting_privacy_item"
                    android:title="@string/setting_privacy" />
            </group>
        </menu>
    </item>
</menu>