<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/change_password_step1_btn_back_v"
        android:layout_width="30dp"
        android:layout_height="20dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/ic_back_arrow_black"
        app:layout_constraintBottom_toTopOf="@id/change_password_step1_title_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/change_password_step1_title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/nanumgothic_extrabold"
        android:text="@string/change_password"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@id/change_password_step1_email_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/change_password_step1_btn_back_v" />

    <!-- email -->
    <TextView
        android:id="@+id/change_password_step1_email_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/nanumgothic"
        android:text="@string/email"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/change_password_step1_email_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/change_password_step1_title_tv" />

    <EditText
        android:id="@+id/change_password_step1_email_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:autofillHints="@string/hint_email"
        android:background="@drawable/bg_empty_btn_green"
        android:fontFamily="@font/nanumgothic"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:paddingStart="45dp"
        android:paddingEnd="15dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/change_password_step1_verify_code_tv"
        app:layout_constraintEnd_toStartOf="@id/change_password_step1_send_email_iv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/change_password_step1_email_tv"
        tools:ignore="TextFields" />

    <View
        android:id="@+id/change_password_step1_email_logo_v"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/ic_at_sign_green"
        app:layout_constraintBottom_toBottomOf="@id/change_password_step1_email_et"
        app:layout_constraintStart_toStartOf="@id/change_password_step1_email_et"
        app:layout_constraintTop_toTopOf="@id/change_password_step1_email_et" />

    <ImageView
        android:id="@+id/change_password_step1_send_email_iv"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="30dp"
        android:contentDescription="@string/verify_email"
        android:src="@drawable/ic_arrow_green"
        app:layout_constraintBottom_toBottomOf="@id/change_password_step1_email_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/change_password_step1_email_et"
        app:layout_constraintTop_toTopOf="@id/change_password_step1_email_et" />

    <!-- verify code -->
    <TextView
        android:id="@+id/change_password_step1_verify_code_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/nanumgothic"
        android:text="@string/code"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/change_password_step1_verify_code_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/change_password_step1_email_et" />

    <EditText
        android:id="@+id/change_password_step1_verify_code_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:autofillHints="@string/hint_verify_code"
        android:background="@drawable/bg_empty_btn_green"
        android:fontFamily="@font/nanumgothic"
        android:hint="@string/hint_verify_code"
        android:inputType="textEmailAddress"
        android:paddingStart="45dp"
        android:paddingEnd="15dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/change_password_step1_btn"
        app:layout_constraintEnd_toStartOf="@id/change_password_step1_verify_code_iv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/change_password_step1_verify_code_tv"
        tools:ignore="TextFields" />

    <View
        android:id="@+id/change_password_step1_verify_code_logo_v"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/ic_lock_green"
        app:layout_constraintBottom_toBottomOf="@id/change_password_step1_verify_code_et"
        app:layout_constraintStart_toStartOf="@id/change_password_step1_verify_code_et"
        app:layout_constraintTop_toTopOf="@id/change_password_step1_verify_code_et" />

    <ImageView
        android:id="@+id/change_password_step1_verify_code_iv"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="30dp"
        android:contentDescription="@string/code"
        android:src="@drawable/ic_verify_green"
        app:layout_constraintBottom_toBottomOf="@id/change_password_step1_verify_code_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/change_password_step1_verify_code_et"
        app:layout_constraintTop_toTopOf="@id/change_password_step1_verify_code_et" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/change_password_step1_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/bg_btn_green"
        android:fontFamily="@font/nanumgothic_extrabold"
        android:text="@string/verify_email"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/change_password_step1_verify_code_et" />

</androidx.constraintlayout.widget.ConstraintLayout>